added wizard component and wizard step component. Select first step in wizard component after contentInit

--- a/src/app/components/fragen/fragen.html
+++ b/src/app/components/fragen/fragen.html
@@ -3,11 +3,15 @@
     <div *ngIf="fragensaetze">
         <div class="fragensatz" *ngFor="let fragensatz of fragensaetze">
             <h2>{{fragensatz.titel}}</h2>
-            <span *ngFor="let frage of fragensatz.fragen, let i = index">
-                <frage required="true"
-                    name="{{frage.id}}"
-                    ngModel  [frage]="frage"></frage>
-            </span>
+            <wizard>
+                <span *ngFor="let frage of fragensatz.fragen, let i = index">
+                    <wizard-step>
+                        <frage required="true"
+                            name="{{frage.id}}"
+                            ngModel  [frage]="frage"></frage>
+                    </wizard-step>
+                </span>
+            </wizard>
         </div>
     </div>
     <div class="buttonbar">
